_cache/v0.18.1/mpfr/specs.md
---
title: "mpfr"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["3.1.6", "4.1.0"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"aws-isc": 2, "root": 6, "aws-ahug": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2, "tutorial": 2, "e4s": 1, "radiuss": 1}}
spec_details: [{"hash": "ixy5ws5y6y235jgsskcjozva7nwisvko", "compiler": "gcc@=7.3.1", "versions": ["4.1.0"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["libs=shared,static"], "stacks": ["aws-isc", "root", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/mpfr-4.1.0/linux-amzn2-x86_64_v4-gcc-7.3.1-mpfr-4.1.0-ixy5ws5y6y235jgsskcjozva7nwisvko.spack"}, {"hash": "nehjimtwqpzaszbk3nafgivjy5b4tthw", "compiler": "gcc@=7.3.1", "versions": ["4.1.0"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["libs=shared,static"], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/mpfr-4.1.0/linux-amzn2-aarch64-gcc-7.3.1-mpfr-4.1.0-nehjimtwqpzaszbk3nafgivjy5b4tthw.spack"}, {"hash": "k2haucmiex7goeyz6dsoh4owplmvfn7a", "compiler": "gcc@=7.3.1", "versions": ["4.1.0"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["libs=shared,static"], "stacks": ["aws-isc", "root", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/mpfr-4.1.0/linux-amzn2-x86_64_v3-gcc-7.3.1-mpfr-4.1.0-k2haucmiex7goeyz6dsoh4owplmvfn7a.spack"}, {"hash": "mx44fxq3s23uooj6fwihq6go3aew3xjm", "compiler": "gcc@=7.3.1", "versions": ["4.1.0"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["libs=shared,static"], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/mpfr-4.1.0/linux-amzn2-graviton2-gcc-7.3.1-mpfr-4.1.0-mx44fxq3s23uooj6fwihq6go3aew3xjm.spack"}, {"hash": "vmql5cb4vcdkgkonkqgzdkryyb5dy7jl", "compiler": "gcc@=7.5.0", "versions": ["3.1.6"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["libs=shared,static", "patches=7a6dd71"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/mpfr-3.1.6/linux-ubuntu18.04-x86_64-gcc-7.5.0-mpfr-3.1.6-vmql5cb4vcdkgkonkqgzdkryyb5dy7jl.spack"}, {"hash": "3txoqc5ghe6wlh4l3nyqkt6re4didzd4", "compiler": "gcc@=7.5.0", "versions": ["4.1.0"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["libs=shared,static"], "stacks": ["e4s", "root", "tutorial", "radiuss"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/mpfr-4.1.0/linux-ubuntu18.04-x86_64-gcc-7.5.0-mpfr-4.1.0-3txoqc5ghe6wlh4l3nyqkt6re4didzd4.spack"}]
---